--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -3,7 +3,7 @@
   flex-basis: 475px;
   flex-shrink: 1;
   box-sizing: border-box;
-  height: calc(100vh - 44px);
+  height: 100%;
   overflow-y: auto;
 }
 
@@ -13,7 +13,7 @@
     display: block;
     order: 2;
     flex-grow: 1;
-    padding-top: 10px;
+    padding: 10px 10% 0 10%;
   }
 }
 
