--- a/src/Layout/Layout.module.css
+++ b/src/Layout/Layout.module.css
@@ -1,5 +1,4 @@
 .Container {
-  /* max-width: 768px; */
   margin: 0 auto;
   height: 100vh;
   display: flex;
@@ -8,7 +7,7 @@
 
 .Header {
   padding: 10px 0;
-  background-color: gray;
+  background-color: #ddd;
 }
 
 .logo {
@@ -16,6 +15,7 @@
   margin: 0 auto;
   padding-left: 20px;
   font-size: 24px;
+  font-weight: 700;
 }
 
 .Main {
