--- a/src/components/InputAndFilterContainer/InputAndFilterContainer.module.css
+++ b/src/components/InputAndFilterContainer/InputAndFilterContainer.module.css
@@ -1,28 +1,42 @@
 .Container {
   flex-basis: 293px;
-  padding: 10px 10px;
   box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .InputContainer input {
   width: 100%;
-
   box-sizing: border-box;
   padding: 5px;
-  margin: 5px 0;
 
   border: 1px solid black;
   border-radius: 3px;
 }
 
+.InputContainer p {
+  margin-top: 16px;
+  font-size: 12px;
+  width: fit-content;
+  margin-left: auto;
+}
+
+.ButtonLi {
+  margin-bottom: 10px;
+}
+.ButtonLi:last-child {
+  margin-bottom: 0;
+}
+
 @media (max-width: 768px) {
   .Container {
     order: 1;
-    flex-basis: 0;
+    flex: 0 0 auto;
     margin: 0 auto;
 
-    display: flex;
-    gap: 30px;
+    flex-direction: row;
     width: 80vw;
     justify-content: center;
   }
